--- a/myGolemApp/DESCRIPTION
+++ b/myGolemApp/DESCRIPTION
@@ -1,17 +1,21 @@
 Package: myGolemApp
-Title: An Amazing Shiny App
+Title: An example goelm app
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "firstname",
-           family = "lastname",
-           role = c("aut", "cre"),
-           email = "your@email.com")
-Description: What the package does (one paragraph).
-License: What license is it under?
+    person("Martin", "Frigaard", , "mjfrigaard@pm.me", role = c("cre", "aut"))
+Description: A working example of the golem package.
+License: MIT + file LICENSE
 Imports: 
     config (>= 0.3.1),
     golem (>= 0.3.5),
     shiny (>= 1.7.4)
+Suggests: 
+    spelling,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
 Encoding: UTF-8
+Language: en-US
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.3
+Depends: 
+    R (>= 2.10)
