--- a/myGolemApp/inst/golem-config.yml
+++ b/myGolemApp/inst/golem-config.yml
@@ -1,8 +1,8 @@
 default:
-  golem_name: myGolemApp
+  golem_name: golex
   golem_version: 0.0.0.9000
   app_prod: no
 production:
   app_prod: yes
 dev:
-  golem_wd: /Users/mjfrigaard/projects/shiny-app-setups/myGolemApp
+  golem_wd: !expr here::here()
