--- a/myPkgApp/DESCRIPTION
+++ b/myPkgApp/DESCRIPTION
@@ -6,12 +6,12 @@ Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 Depends: 
-    R (>= 2.10)
+    R (>= 3.5)
 Suggests: 
     knitr,
     rmarkdown,
@@ -20,4 +20,5 @@ Config/testthat/edition: 3
 VignetteBuilder: knitr
 Imports: 
     ggplot2,
-    shiny
+    shiny,
+    stringr
