--- a/myLeprechaunApp/.Rbuildignore
+++ b/myLeprechaunApp/.Rbuildignore
@@ -2,3 +2,11 @@
 ^\.Rproj\.user$
 ^\.leprechaun$
 ^data-raw$
+^scss$
+^srcjs$
+^node_modules$
+^package\.json$
+^package-lock\.json$
+^webpack\.dev\.js$
+^webpack\.prod\.js$
+^webpack\.common\.js$
