--- a/myLeprechaunApp/package.json
+++ b/myLeprechaunApp/package.json
@@ -1,17 +1,10 @@
 {
-  "dependencies": {
-    "lit": "^2.6.1"
-  },
   "name": "myleprechaunapp",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "directories": {
     "man": "man"
-  },
-  "devDependencies": {
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-merge": "^5.8.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,5 +16,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "devDependencies": {
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "lit": "^2.6.1"
+  }
 }
